# LangManus-Demo

./: .cursorrules  .dockerignore  .env  .env.example  .gitignore  DOCKER.md  Dockerfile  Dockerfile.netease  Dockerfile.simple  Dockerfile.tencent  Makefile  README.md  agent.py  architecture_demo.py  demo.py  demo_offline.py  docker-compose.yml  main.py  planner.py  pre-commit  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt  server.py  streamlit_app.py  test_docker_config.py  test_logs.py  test_simple.py  tools_test.py
agents/: browser.py  coder.py  reporter.py  researcher.py
src/: __init__.py  main_app.py
src/agents/: __init__.py  agents.py
src/config/: __init__.py  agents.py  env.py  tools.py
src/core/: __init__.py  llm.py  workflow.py  workflow_with_logs.py
src/prompts/: __init__.py  browser.md  coder.md  coordinator.md  file_manager.md  planner.md  reporter.md  researcher.md  supervisor.md  template.py
src/tools/: __init__.py  analysis_tools.py  bash_tool.py  browser_tools.py  crawl.py  decorators.py  file_tools.py  github_tools.py  python_tools.py  search_tools.py
tests/: __init__.py
tests/integration/: __init__.py  test_workflow.py
