[project]
name = "langmanus-demo"
version = "0.1.0"
description = "A LangManus-powered GitHub repository analyzer"
authors = [
    {name = "Demo User", email = "demo@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.53",
    "langchain-openai>=0.2.14",
    "langchain-community>=0.3.12",
    "tavily-python>=0.5.0",
    "streamlit>=1.40.2",
    "fastapi>=0.115.6",
    "uvicorn>=0.22.0,<0.24.0",
    "python-dotenv>=1.0.1",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "matplotlib>=3.9.4",
    "pillow>=11.0.0",
    "pydantic>=2.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "black>=24.10.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 
